@@ -338,6 +338,9 @@ extern WandExport MagickBooleanType
   MagickSpliceImage(MagickWand *,const size_t,const size_t,const ssize_t,
     const ssize_t),
   MagickSpreadImage(MagickWand *,const double),
+  MagickStatisticImage(MagickWand *,const ChannelType,const StatisticType,
+    const double),
+  MagickStatisticImageChannel(MagickWand *,const StatisticType,const double),
   MagickStripImage(MagickWand *),
   MagickSwirlImage(MagickWand *,const double),
   MagickTintImage(MagickWand *,const PixelWand *,const PixelWand *),
